--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 h1
 {
-	font-family:Comic Sans MS; 
+	font-family:sans-serif; 
 	font-size: 50px;
 }
 a:link, a:visited 
@@ -10,37 +10,66 @@ background-color:  #0087F5;
 text-align: center;
 display: inline-block;
 }
-a:hover, a:active, input:hover 
+a:hover, a:active
 {
-	  /* Start the shake animation and make the animation last for 0.5 seconds */
-  animation: shake 0.5s;
-
-  /* When the animation is finished, start again */
-  animation-iteration-count: infinite;
+	
+	border-top-color: #0B0B0B;
+	border-top-width: 5px; 
 }
 #button
-{
-	font-family:Comic Sans MS; 
-	background-color: #0086F5;
-	border-radius: 15px;
+{	
+	float:center;
+	font-family:sans-serif; 
+	background-color: #fbf336;
+	border-radius: 0px;
 	padding: 25px;  
-	color: #0D0B21; 
+	color: #000034; 
 	border-style: none; 
 	border-width: 30px; 
 	font-size: 20px;
+	transition-duration: 0.2s;
 }
-
-#yellowback
+#bbutton
+{	
+	float:center;
+	font-family:sans-serif; 
+	background-color:  #0086F5;
+	border-radius: 0px;
+	padding: 25px;  
+	color: #ffffff; 
+	border-style: none; 
+	border-width: 30px; 
+	font-size: 20px;
+	transition-duration: 0.2s;
+}
+#button:hover, #bbutton:hover, #shback:hover
 {
-	font-family:Comic Sans MS;
-	background-color: #FFCA0C;
+
+ 	box-shadow: 0 5px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+#back
+{
+	font-family:sans-serif;
 	font-size: 36px;
 	color: #0D0B21;
 }
 
+#shback
+{
+	font-family:sans-serif;
+	font-size: 36px;
+	background-color: #eeeeff;
+	transition-duration: 0.4s;
+	
+}
+#shback:hover
+{
+	background-color: #ffffff;
+}
+
 #greenback
 {	
-	font-family:Comic Sans MS; 
+	font-family:sans-serif; 
 	background-color: #09AB09;
 	font-size: 36px;
 	color:#0D0B21;
@@ -48,7 +77,7 @@ a:hover, a:active, input:hover
 
 #noback
 {	
-	font-family:Comic Sans MS; 
+	font-family:sans-serif; 
 	font-size: 36px;
 	color:#0D0B21;
 }
@@ -66,31 +95,32 @@ a:hover, a:active, input:hover
 
 #maintable
 {
-	background: #0086F5; 
-	color: #ffffff;
-	border: 20px;
 
-
+	color: #0B0B0B;
+	border: 5px;
+	border-style: solid;
+	border-collapse: collapse;
+	border-radius: 50px;
+	box-shadow: 
 
 }
-img:hover {
-  /* Start the shake animation and make the animation last for 0.5 seconds */
-  animation: shake 0.5s;
 
-  /* When the animation is finished, start again */
-  animation-iteration-count: infinite;
+#text
+{
+	font-size: 45px;
+}
+input:focus {
+  background-color: white;
 }
 
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+* {
+  box-sizing: border-box;
 }
+
+
+#tablecell
+{
+	style="padding-right: 30px; padding-right: 30px;"
+
+}
+
